# porter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  porter.example.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: config.rs  error.rs  lib.rs  namespace.rs  registry.rs
src/cli/: access_guard.rs  discovery.rs  harness.rs  help_parser.rs  mod.rs  read_only_heuristic.rs  subcommand_parser.rs
src/cli/profiles/: ansible.rs  aws.rs  az.rs  doggo.rs  gcloud.rs  gh.rs  gitlab.rs  kubectl.rs  mod.rs  rg.rs  tldr.rs  whois.rs
src/server/: health.rs  http.rs  mod.rs  stdio.rs
src/standalone/: hot_reload.rs  mod.rs  server.rs
